<resources>
    <string name="app_name">CapstonePesaing</string>

    <string-array name="category_name">
        <item>Sayur</item>
        <item>Buah</item>
        <item>Daging</item>
        <item>Bumbu</item>
        <item>Ikan</item>
        <item>Ayam</item>
        <item>Kue</item>
    </string-array>

    <integer-array name="category_img">
        <item>@drawable/sayur</item>
        <item>@drawable/buah</item>
        <item>@drawable/daging</item>
        <item>@drawable/bumbu</item>
        <item>@drawable/ikan</item>
        <item>@drawable/ayam</item>
        <item>@drawable/kue</item>
    </integer-array>

    <string name="ek_img_content">ExportKit Image</string>
    <string name="login_string">Login</string>
    <string name="password_string">Password</string>
    <string name="konfirm_pw">Konirmasi Password</string>
    <string name="new_password_string">New Password</string>
    <string name="email_string">Email</string>
    <string name="login_ek1_string">Masuk</string>
    <string name="title_activity_register">Daftar</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="welcome">Selamat datang</string>
    <string name="welcome2">Mau belanja apa hari ini?</string>
    <string name="new_order">New Order</string>
    <string name="otw">Sedang Dalam Perjalanan</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="name_string">Name</string>
    <string name="phone_num_string">Phone Number</string>
    <string name="txt_pre_login">Untuk Melanjutkan Daftar dulu yukk!</string>
    <string name="txt_pre_login2">Jika sudah memiliki akun</string>
    <string name="txt_to_login"><u>Login</u></string>
    <string name="txt_finish_regist">Yeayy berhasil terdaftar!</string>
    <string name="txt_finish_regist2">Yuk lanjut masuk ke aplikasi nya!</string>
    <string name="btn_finish_regist">Masuk sekarang</string>
    <string name="pedagang_keliling">Pedagang Keliling</string>
    <string name="warung">Warung</string>
    <string name="kategori">Kategori</string>
    <string name="list_of_category">list of category</string>
    <string name="best_seller">Best Seller</string>
    <string name="n_pedagang_keliling">Nama Pedagang</string>
    <string name="n_pedagang_warung">Nama Warung</string>
    <string name="live_location">1km</string>
    <string name="out_location_pedagang">Lokasi terkini pedagang</string>
    <string name="out_location_warung">Lokasi terkini warung</string>
    <string name="simpang_pengguna">Simpan Pengguna</string>
    <string name="txt_barang">Nama Barang</string>

    <!--Botton Nav-->
    <string name="home">Home</string>
    <string name="riwayat">Riwayat</string>
    <string name="cart">Keranjang</string>
    <string name="keluar">Keluar</string>

    <!--Profile-->
    <string name="nama_pengguna">Nama Pengguna</string>
    <string name="no_pengguna">No Pengguna</string>
    <string name="txt_akun">Akun</string>
    <string name="txt_ganti_pass">Ganti password</string>
    <string name="txt_pesanan">Pesanan</string>
    <string name="txt_metode">Metode Pembayaran</string>
    <string name="txt_Logout">Logout</string>
    <string name="txt_footer">created by PESAING Team 2022</string>
    <string name="txt_footer_version">Versi 0.0.1 beta</string>

    <!-- View Pedagang   -->
    <string name="text_mp_1">Ingin Daftarkan barang?</string>
    <string name="text_mp_2">Lapakmu</string>
    <string name="text_mp_btn">Daftarkan Barang</string>
    <string name="text_dp">pilih!</string>
    <string name="inp_nama">Nama</string>
    <string name="inp_harga">Harga</string>
    <string name="inp_stok">Stok</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="password_error">Password Error</string>
    <string name="inp_satuan">Satuan</string>
    <string name="btn_inp">Tambahkan Barang</string>
    <string-array name="dropDown_kategori">
        <item>Sayuran</item>
        <item>Buah</item>
        <item>Daging</item>
        <item>Bumbu</item>
        <item>Ikan</item>
        <item>Ayam</item>
        <item>Kue</item>
    </string-array>
    <string-array name="dropDown_satuan">
        <item>Kg</item>
        <item>gram</item>
        <item>Ikat</item>
    </string-array>
</resources>